--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
     margin: 0;
     padding: 0;
 }
@@ -59,7 +60,7 @@ main {
     width: calc(100% - 4rem);
 }
 
-main > div {
+main>div {
     margin: 0 auto;
     max-width: 64rem;
 }
@@ -78,7 +79,7 @@ footer {
     width: 100%;
 }
 
-footer > div {
+footer>div {
     color: white;
     display: flex;
     flex-direction: row;
@@ -111,7 +112,7 @@ footer a {
 }
 
 footer a:hover {
-    color:white;
+    color: white;
 }
 
 #surprise {
@@ -124,4 +125,3 @@ footer a:hover {
         display: inline;
     }
 }
-
